--- a/index.html
+++ b/index.html
@@ -159,11 +159,7 @@
     </aside>
     <section class="panel editor">
       <textarea id="editor" class="editor_ta" placeholder="Введите текст...">
-Студрада КПІ спільно зі [Студпарламентом КНУ](https://t.me/spu_knu) ініціювали організацію відкритої онлайн-зустрічі із Вітренком Андрієм у відповідь на широкий публічний [резонанс](https://t.me/studfreedom/2921?single) щодо його можливого призначення на посаду Міністра освіти і науки.
-
-Ми прагнемо, аби студенти могли сформувати власну думку — безпосередньо поставивши запитання. Рішення, які прийматимуться при визначенні майбутнього освіти України, мають бути раціональними та справедливими.
-
-Як тільки отримаємо підтвердження щодо участі — повідомимо про дату проведення. Нашої позиції немає, поки ми не почуємо прямих відповідей на відкриті питання. Ми не готові вестися на інформаційні маніпуляції та приймати невиважені емоційні рішення.
+[Observer](t.me/obsvrtg)
 </textarea>
     </section>
 
