--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </aside>
     <section class="panel editor">
       <textarea id="editor" class="editor_ta" placeholder="Введите текст...">
-[Observer](t.me/obsvrtg)
+[Observer](https://t.me/obsvrtg)
 </textarea>
     </section>
 
